<resources>

    <!-- Label Botões -->
    <string name="bt_add_oportunidade">Add Oportunidade</string>
    <string name="bt_empresa">Empresa</string>
    <string name="bt_entrar">Entrar</string>
    <string name="bt_esquecer_senha">Esqueceu sua senha?</string>
    <string name="bt_freelancer">Freelancer</string>
    <string name="bt_criar_conta">Crie sua conta</string>
    <string name="bt_salvar">Salvar</string>
    <string name="bt_voltar">Voltar</string>
    <string name="bt_proximo">Próximo</string>
    <string name="bt_sair">Sair</string>

    <!-- Label EditText -->
    <string name="lb_descricao">Descrição</string>
    <string name="lb_email">E o seu e-mail?</string>
    <string name="lb_entrar">Entrar</string>
    <string name="lb_criar_senha">Crie uma senha</string>
    <string name="lb_nome">Qual o seu nome?</string>
    <string name="lb_periodo">Periodo</string>
    <string name="lb_senha">Senha</string>
    <string name="lb_titulo">Titulo</string>
    <string name="lb_voce_e">Você é...</string>


    <!-- Main -->
    <string name="app_name">Freela</string>

    <!-- Mensagem de Erro -->
    <string name="erro_autenticacao">Email ou Senha inválidos.</string>
    <string name="erro_campos_obringatorios">Campos obrigatórios</string>
    <string name="erro_conexao">Sem conexão</string>

    <!-- TextView -->
    <string name="tv_ola">Olá!</string>
    <string name="tv_email">E-mail</string>

    <!-- Título de Telas -->
    <string name="title_add_oportunidade">Adicionar Oportunidade</string>
    <string name="title_criar_conta">Registrar Usuário</string>

    <string name="text_home">Home Fragment</string>
    <string name="text_notifications">Notifications Fragment</string>
    <string name="text_search">Search Fragment</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_pesquisa">Pesquisa</string>
    <string name="menu_oportunidade">Oportunidades</string>
    <string name="menu_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_dashboard">Dashboard</string>
    <string name="fragment_oportunidade">Oportunidade</string>
    <string name="fragment_perfil">Perfil</string>
    <string name="fragment_pesquisa">Explorar</string>


    <string name="oportunidade_compartilhar">Compartilhar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_favoritos">Favoritos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
