<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="20dp"
        android:text="@string/bt_voltar"
        android:id="@+id/conta2_bt_voltar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/lb_nome"
        android:textSize="30dp"
        android:textColor="#333333"
        android:id="@+id/conta2_lb_nome"/>

    <EditText
        android:id="@+id/conta2_et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/conta2_lb_nome" >
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/lb_email"
        android:textSize="30dp"
        android:textColor="#333333"
        android:id="@+id/conta2_lb_email"/>

    <EditText
        android:id="@+id/conta2_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/conta2_lb_email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="80dp"
        android:text="@string/bt_proximo"
        android:id="@+id/conta2_bt_proximo" />

</LinearLayout>
